[gd_scene load_steps=5 format=3 uid="uid://bgvyi8xe7le1y"]

[ext_resource type="Script" uid="uid://dpppd3de5g41h" path="res://main.gd" id="1_kmp5e"]
[ext_resource type="PackedScene" uid="uid://bp0ff5ime42tk" path="res://mob/mob.tscn" id="2_vw7ai"]
[ext_resource type="PackedScene" uid="uid://cp5vx4hglmfo6" path="res://player/player.tscn" id="3_cwtcf"]

[sub_resource type="Curve2D" id="Curve2D_n1jba"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_kmp5e")
mob_scene = ExtResource("2_vw7ai")

[node name="Mob" parent="." instance=ExtResource("2_vw7ai")]

[node name="Player" parent="." instance=ExtResource("3_cwtcf")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_n1jba")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(480, 0)
rotation = 1.5707964

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
